# controlkit

./: .gitignore  CMakeLists.txt  KF5Kirigami2Config.cmake.in  KF5Kirigami2Macros.cmake  KF5KirigamiMacros.cmake  Mainpage.dox  README.md  controlkit.pro  gettext.sh  kirigami-icons.qrc  kirigami.pri  kirigami.pro  kirigami.qrc  kirigami.qrc.in  metainfo.yaml
autotests/: CMakeLists.txt  tst_actiontoolbar.qml  tst_avatar.qml  tst_icon.qml  tst_keynavigation.qml  tst_listskeynavigation.qml  tst_pagerouter.qml  tst_pagerow.qml  tst_routerwindow.qml
autotests/pagepool/: TestPage.qml  tst_layers.qml  tst_pagepool.qml
examples/android/: AndroidManifest.xml  CMakeLists.txt  main.cpp  resources.qrc
examples/demoapplication/: CMakeLists.txt  MainPage.qml  main.cpp  main.qml  resources.qrc
examples/demoapplication/gallery/: ButtonGallery.qml  DialogGallery.qml  GridHoverGallery.qml  ImageGallery.qml  LabelGallery.qml  ListViewHoverGallery.qml  MenuPopupGallery.qml  PageGallery.qml  SearchGallery.qml  Switch_Slider.qml  TestGallery.qml  TestPopupGallery.qml
examples/galleryapp/: AndroidManifest.xml  CMakeLists.txt  resources.qrc
jingosDisplay/: CMakeLists.txt  JDisplay.qml  jdisplaymetrics.cpp  jdisplaymetrics.h  jingosDisplay.pro  jingosDisplayPlugin.cpp  jingosDisplayPlugin.h  qmldir
jingosMultimedia/: CMakeLists.txt  MediaDbusSet.cpp  MediaDbusSet.h  jbasevideosurface.cpp  jbasevideosurface.h  jgstmediainfo.cpp  jgstmediainfo.h  jingosMultimedia.pro  jmultimediaModuleplugin.cpp  jmultimediaModuleplugin.h  mpvobject.cpp  mpvobject.h  mpvrenderitem.cpp  mpvrenderitem.h  player.cpp  player.h  qmldir  qthelper.h
jingosTheme/: CMakeLists.txt
jingosTheme/jingosDark/: metadata.desktop
jingosTheme/jingosDark/contents/: colors  defaults
jingosTheme/jingosLight/: metadata.desktop
jingosTheme/jingosLight/contents/: colors  defaults
src/: CMakeLists.txt  JImagePreviewItem.qml  JWallPaperItem.qml  Messages.sh  avatar.cpp  avatar.h  colorutils.cpp  colorutils.h  columnview.cpp  columnview.h  columnview_p.h  delegaterecycler.cpp  delegaterecycler.h  desktopicon.cpp  desktopicon.h  enums.cpp  enums.h  formlayoutattached.cpp  formlayoutattached.h  icon.cpp  icon.h  imagecolors.cpp  imagecolors.h  jmediasettool.cpp  jmediasettool.h  jplatformtheme.cpp  jplatformtheme.h  jthememanager.cpp  jthememanager.h  kirigamiplugin.cpp  kirigamiplugin.h  mnemonicattached.cpp  mnemonicattached.h  mobilecomponentsplugin.cpp  pagepool.cpp  pagepool.h  pagerouter.cpp  pagerouter.h  qmldir  scenepositionattached.cpp  (+15 more)
src/ImagePreview/: jexiv2extractor.cpp  jexiv2extractor.h  jimagedocument.cpp  jimagedocument.h  jresizehandle.cpp  jresizehandle.h  jresizerectangle.cpp  jresizerectangle.h  jwallpapersettings.cpp  jwallpapersettings.h
src/ThemePrivate/: jbasictheme.cpp  jbasictheme.h  jbasictheme_p.h  jplatformtheme_p.cpp  jplatformtheme_p.h  jthememanager_p.cpp  jthememanager_p.h
src/controls/: AboutPage.qml  AbstractApplicationHeader.qml  AbstractApplicationItem.qml  AbstractApplicationWindow.qml  AbstractCard.qml  AbstractItemViewHeader.qml  AbstractListItem.qml  Action.qml  ActionTextField.qml  ActionToolBar.qml  ApplicationHeader.qml  ApplicationItem.qml  ApplicationWindow.qml  Avatar.qml  BasicListItem.qml  Card.qml  CardsGridView.qml  CardsLayout.qml  CardsListView.qml  CheckableListItem.qml  ContextDrawer.qml  FormLayout.qml  GlobalDrawer.qml  Heading.qml  Hero.qml  Icon.qml  InlineMessage.qml  ItemViewHeader.qml  JArrowPopup.qml  JBlurBackground.qml  JButton.qml  JDialog.qml  JIconButton.qml  JImagePreviewItem.qml  JInputDialog.qml  JKeyBdLineEdit.qml  JLabel.qml  JMenuSeparator.qml  JMouseHover.qml  JMouseHoverMask.qml  (+43 more)
src/controls/ImagePreview/: JBasicResizeHandle.qml  JCropView.qml  JImageViewer.qml
src/controls/TextFieldPrivate/: TextFieldCursor.qml  TextFieldToolBar.qml  qmldir
src/controls/private/: AbstractPageHeader.qml  ActionButton.qml  ActionIconGroup.qml  ActionMenuItem.qml  ActionMenuItemBase.qml  ActionMenuItemQt510.qml  ActionToolBarLayoutDetails.qml  ActionsMenu.qml  BannerImage.qml  CardsGridViewPrivate.qml  CardsListViewPrivate.qml  ConstValue.qml  ContextDrawerActionItem.qml  CornerShadow.qml  DefaultCardBackground.qml  DefaultListItemBackground.qml  EdgeShadow.qml  GlobalDrawerActionItem.qml  PageRowGlobalToolBarStyleGroup.qml  PageRowGlobalToolBarUI.qml  PrivateActionToolButton.qml  PrivateMouseHover.qml  PrivateMouseSolid.qml  RefreshableScrollView.qml  SwipeItemEventFilter.qml  ToolBarPageHeader.qml
src/controls/swipenavigator/: PrivateSwipeTab.qml  PrivateSwipeTabBar.qml  PrivateSwipeTabBarLoader.qml  SwipeNavigator.qml
src/controls/templates/: AbstractApplicationHeader.qml  AbstractCard.qml  AbstractListItem.qml  (+10 more)
src/example/: metadata.desktop
src/fallbacktheme/: Icon.qml  Theme.qml
src/libkirigami/: CMakeLists.txt  basictheme.cpp  basictheme_p.h  kirigamipluginfactory.cpp  platformtheme.cpp  platformtheme.h  tabletmodewatcher.cpp  tabletmodewatcher.h
src/plasmatheme/: Theme.qml
src/qml/: AbstractApplicationHeader.qml  AbstractApplicationWindow.qml  AbstractListItem.qml  ActionsForListItem.qml  ApplicationHeader.qml  ApplicationWindow.qml  BasicListItem.qml  ContextDrawer.qml  GlobalDrawer.qml  Heading.qml  Label.qml  OverlayDrawer.qml  OverlaySheet.qml  Page.qml  ScrollablePage.qml  SplitDrawer.qml  SwipeListItem.qml  qmldir
src/qrcexample/: AndroidManifest.xml  CMakeLists.txt  main.cpp  resources.qrc
src/scenegraph/: header_desktop_core.glsl  paintedrectangleitem.cpp  paintedrectangleitem.h  shaders.qrc  shadowedborderrectangle.frag  shadowedborderrectangle_core.frag  shadowedborderrectanglematerial.cpp  shadowedborderrectanglematerial.h  shadowedbordertexturematerial.cpp  shadowedbordertexturematerial.h  shadowedrectangle.frag  shadowedrectangle.vert  shadowedrectangle_core.frag  shadowedrectangle_core.vert  shadowedrectanglematerial.cpp  shadowedrectanglematerial.h  shadowedrectanglenode.cpp  shadowedrectanglenode.h  shadowedtexturematerial.cpp  shadowedtexturematerial.h  shadowedtexturenode.cpp
src/systemtheme/: Icon.qml  Units.qml
(+273 files in other folders)
